@@ -1,3 +1,8 @@
+2015-05-09  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* plugins/base/getauthtoken.py (Authorization): Fixed a SSL error
+	  to open the Twitter Authorization page (issue 77).
+
 2015-02-13  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* NEWS: 2.4.4 release.
